infrastructure/k8s-production/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: tickets-service
                port:
                  number: 3000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 3000
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payments-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
